--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,18 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.2
-  image_picker: ^0.8.2+3
   path_provider: ^2.0.3
   geolocator: ^10.1.0
+  image_picker: ^0.8.4
+  permission_handler: ^11.0.1
+  camera: ^0.10.5+7
+  uuid: ^3.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
