--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   camera: ^0.10.5+7
   uuid: ^3.0.4
   flutter_rating_bar: ^4.0.1
+  geocoding: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
